# OpenAi_Agent_SDK

./: README.md
Chatbot with Streaming/chatbot_chainlit/: history.json  my_agent.py
Simple Ai chainlit chatbot using SDK/: Code link
Simple tool using/: function as tool
Simple tool using/simple_tool/: pyproject.toml
Simple tool using/simple_tool/src/simple_tool/: __init__.py  agent_tool.py
chatbot with function as tool/: chainlit chatbot with simple tool
chatbot with function as tool/chatbot_chainlit/: history.json  my_agent.py
